--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -13,3 +13,20 @@
 header {
     height: 50px;
 }
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    background-color: white;
+  }
+  
+  li {
+    height: 50px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 5px;
+    background-color: #C9ABD3;
+    color: white;
+    font-size: 1.5em;
+    line-height: 1.5;
+  }
